--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 
 <html>
     <h1>
-        Hey, I'm NetworkChuck
+        Hey, I'm #1 domo fan
     </h1>
     <body>
         <h2>About me</h2>
         <p>
-            I am a coffee addict who makes vidoes sometimes.
+            I am a big fan of domo
         </p>
         <h2>What I'm working on</h2>
         <p>
-            I'm obsessed with AI right now and I'm working on the CPTS from HTB.
+            I'm obsessed with domo
         </p>
     </body>
 </html>
