--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
         <p>
             I am a big fan of domo
         </p>
-        <h2>What I'm working on</h2>
+        <h2>W Domo </h2>
         <p>
             I'm obsessed with domo
         </p>
+        <h3> where can I contact this cool guy called domo </h3>
+        </p> Discord: d0mo
+        </p> Twitter: https://twitter.com/D0MO26?t=p_p0xxp6BpworqGlKJm9kg&s=09
     </body>
 </html>
