--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         </p>
         <h3> where can I contact this cool guy called domo </h3>
         </p> Discord: d0mo
-        </p> Twitter: https://twitter.com/D0MO26?t=p_p0xxp6BpworqGlKJm9kg&s=09
+        </p> Twitter: <a href="https://twitter.com/D0MO26?t=p_p0xxp6BpworqGlKJm9kg&s=09">click here</a>
+
     </body>
 </html>
