--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
 
 <html>
     <h1>
-        Hey, I'm #1 domo fan
+        #1 domo fanpage
     </h1>
     <body>
-        <h2>About me</h2>
+        <h2>Who is domo</h2>
         <p>
-            I am a big fan of domo
+            domo is a very cool person
         </p>
-        <h2>W Domo </h2>
+        <h2>Is Domo that cool?</h2>
         <p>
-            I'm obsessed with domo
+            I'm obsessed with domo, He's the coolest
         </p>
-        <h3> where can I contact this cool guy called domo </h3>
+        <h3> Where can I contact this cool guy domo?</h3>
         </p> Discord: d0mo
-        </p> Twitter: <a href="https://twitter.com/D0MO26?t=p_p0xxp6BpworqGlKJm9kg&s=09">click here</a>
+        </p> X/Twitter: <a href="https://twitter.com/D0MO26?t=p_p0xxp6BpworqGlKJm9kg&s=09">D0MO26</a>
+        </p> Tiktok: <a href="https://www.tiktok.com/@2domo6">2domo6</a>
+        </p> instagram: <a href="https://www.instagram.com/2domo6?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">2domo6</a>
+        </p> Phone number: Don't have it yet :(
+        </p> Home address: Don't have it yet :(
+        </p> Splatfestival: <a href="https://discord.gg/grMSxZf">https://discord.gg/grMSxZf</a>
 
     </body>
 </html>
