--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </p>
         <h3> Where can I contact this cool guy domo?</h3>
         </p> Discord: d0mo
-        </p> X/Twitter: <a href="https://x.com/i/flow/login?redirect_after_login=%2FD0MO26">D0MO26</a>
+        </p> X/Twitter: <a href="https://x.com/D0MO26?t=p_p0xxp6BpworqGlKJm9kg">D0MO26</a>
         </p> Tiktok: <a href="https://www.tiktok.com/@2domo6">2domo6</a>
         </p> instagram: <a href="https://www.instagram.com/2domo6?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">2domo6</a>
         </p> Phone number: Don't have it yet :(
