--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         </p> instagram: <a href="https://www.instagram.com/2domo6?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">2domo6</a>
         </p> Phone number: Don't have it yet :(
         </p> Home address: Don't have it yet :(
+        </p> <img src="domo.png" alt="Current profile"/>
 
     </body>
 </html>
