--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <body>
         <h2>Who is domo</h2>
         <p>
-            domo is a very cool person
+            domo is a  cool and amazing person, what is there to not love about him. I'm obsessed with him
         </p>
-        <h2>Is Domo that cool?</h2>
+        <h2>Is domo that cool?</h2>
         <p>
             I'm obsessed with domo, He's the coolest
         </p>
@@ -19,6 +19,8 @@
         </p> instagram: <a href="https://www.instagram.com/2domo6?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">2domo6</a>
         </p> Phone number: Don't have it yet :(
         </p> Home address: Don't have it yet :(
+        <h3>PROFILES (I will update this)<h3>
+        </p> Current discord profile:
         </p> <img src="domo.png" alt="Current profile"/>
 
     </body>
