--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         #1 domo fanpage
     </h1>
     <body>
+        <h2>Who are you</h2>
+        <p>
+            dI'm #1 domo fan
+        </p>
         <h2>Who is domo</h2>
         <p>
-            domo is a  cool and amazing person, what is there to not love about him. I'm obsessed with him
-        </p>
-        <h2>Is domo that cool?</h2>
-        <p>
-            I'm obsessed with domo, He's the coolest
+            domo is a very cool and amazing person, what is there to not love about him. I'm obsessed with him
         </p>
         <h3> Where can I contact this cool guy domo?</h3>
         </p> Discord: d0mo
@@ -22,6 +22,7 @@
         <h3>PROFILES (I will update this)<h3>
         </p> Current discord profile:
         </p> <img src="domo.png" alt="Current profile"/>
+        </p> <a href="pfparchive.html">archive of profile I have that domo has used</a>
 
     </body>
 </html>
