--- a/pfparchive.html
+++ b/pfparchive.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="">
   </p> <a href="index.html">back</a>
-  </p> <img src="domo.png" alt="Current profile"/>
+  </p> <img src="pfpbackup/domo1.png" alt="Current profile"/>
   <head>
     <meta charset="utf-8">
     <title></title>
