--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h3>PROFILES (I will update this)<h3>
         </p> Current discord profile:
         </p> <img src="domo.png" alt="Current profile"/>
-        </p> <a href="pfparchive.html">archive of profile I have that domo has used</a>
+        </p> <a href="pfparchive.html">archived profiles</a>
 
     </body>
 </html>
