--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <h2>Who are you</h2>
         <p>
-            dI'm #1 domo fan
+            I'm #1 domo fan
         </p>
         <h2>Who is domo</h2>
         <p>
