--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
         </p> Phone number: Don't have it yet :(
         </p> Home address: Don't have it yet :(
         <h3>PROFILES (I will update this)<h3>
-        </p> Current discord profile:
-        </p> <img src="domo.png" alt="Current profile"/>
+        </p> Current Discord profile:
+        </p> <img src="domo.png" alt="Current discord profile"/>
+        </p> Current Youtube profile:
+        </p> <img src="youtube.jpg" alt="Current youtube profile"/>
         </p> <a href="pfparchive.html">archived profiles</a>
 
     </body>
