--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         </p> Current Youtube profile:
         </p> <img src="youtube.jpg" alt="Current youtube profile"/>
         </p> <a href="pfparchive.html">archived profiles</a>
+        <h3> Second fan</h3>
+        </p> <img src="2fan.png" alt="Current second fan"/>
 
     </body>
 </html>
