--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </p> Tiktok: <a href="https://www.tiktok.com/@2domo6">2domo6</a>
         </p> instagram: <a href="https://www.instagram.com/2domo6?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">2domo6</a>
         </p> Youtube: <a href="https://youtube.com/@d0mo26">d0mo26</a>
-        </p> Twitch: <a href="https://www.twitch.tv/d0mo26?sr=a">d0mo26</a>
+        </p> Twitch: <a href="https://www.twitch.tv/d0mo26?sr=a">D0MO26</a>
         </p> Phone number: Don't have it yet :(
         </p> Home address: Don't have it yet :(
         <h3>PROFILES (I will update this)<h3>
