--- a/pfparchive.html
+++ b/pfparchive.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="">
-  </p> <a href="index.html">back</a>
+  </p> <a href="index.html">Back</a>
   </p> <img src="pfpbackup/domo1.png" alt="Current profile"/>
   <head>
     <meta charset="utf-8">
