--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <h1>
         #1 domo fanpage
     </h1>
-    <body>
+    <body background="unknown.gif">
         <h2>Who are you</h2>
         <p>
             I'm #1 domo fan
@@ -26,7 +26,8 @@
         </p> <img src="domo.png" alt="Current discord profile"/>
         </p> Current Youtube profile:
         </p> <img src="youtube.jpg" alt="Current youtube profile"/>
-        </p> <a href="pfparchive.html">archived profiles</a>
+        </p> <a href="pfp.zip" download>archived profiles</a>
+        </p> <a href="pfparchive.html">archived profiles old (i gave up on this lol)</a>
         <h3> Second fan</h3>
         </p> <img src="2fan.png" alt="Current second fan"/>
 
